update team section on all pages

--- a/pay-per-click.html
+++ b/pay-per-click.html
@@ -365,7 +365,7 @@
             <div class="row cards-row mt-5">
                <div class="col-md-6 col-lg-3 text-center mt-4 mt-lg-2">
                   <div class="card">
-                     <img src="assets/images/Group 586.png" class="img-fluid">
+                     <img src="assets/images/new/team/Team 1.jpg" class="img-fluid">
                      <div class="card-footer text-center">
                         <h6 class="mb-0">Marvin McKinney</h6>
                         <p class="mb-0">UI/UX Designer</p>
@@ -374,7 +374,7 @@
                </div>
                <div class="col-md-6 col-lg-3 text-center mt-4 mt-lg-2">
                   <div class="card">
-                     <img src="assets/images/Group 588.png" class="img-fluid">
+                     <img src="assets/images/new/team/Team 2.jpg" class="img-fluid">
                      <div class="card-footer text-center">
                         <h6 class="mb-0">Mark Wiens</h6>
                         <p class="mb-0">App Developer</p>
@@ -383,7 +383,7 @@
                </div>
                <div class="col-md-6 col-lg-3 text-center mt-4 mt-lg-2">
                   <div class="card">
-                     <img src="assets/images/Group 589.png" class="img-fluid">
+                     <img src="assets/images/new/team/Team 3.jpg" class="img-fluid">
                      <div class="card-footer text-center">
                         <h6 class="mb-0">Sohana</h6>
                         <p class="mb-0">WordPress Developer</p>
@@ -392,7 +392,7 @@
                </div>
                <div class="col-md-6 col-lg-3 text-center mt-4 mt-lg-2">
                   <div class="card">
-                     <img src="assets/images/Group 592.png" class="img-fluid">
+                     <img src="assets/images/new/team/Team 4.jpg" class="img-fluid">
                      <div class="card-footer text-center">
                         <h6 class="mb-0">Brooklyn Simmons</h6>
                         <p class="mb-0">Cloud Enginner</p>
