--- a/content-marketing.html
+++ b/content-marketing.html
@@ -628,54 +628,54 @@
         <!-- greate team section start  -->
         <section class="market-great-team">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-12 text-center">
-                        <h6 class="section-small-h6">MEET OUR TEAM</h6>
-                        <h1 class="section-h45 mt-4">This Is Our Growing<br>
-                            Great Team.
-                        </h1>
-                    </div>
-                </div>
-                <div class="row cards-row mt-5">
-                    <div class="col-md-6 col-lg-3 text-center mt-4 mt-lg-2">
-                        <div class="card">
-                            <img src="assets/images/Group 586.png" class="img-fluid">
-                            <div class="card-footer text-center">
-                                <h6 class="mb-0">Marvin McKinney</h6>
-                                <p class="mb-0">UI/UX Designer</p>
-                            </div>
+               <div class="row">
+                  <div class="col-md-12 text-center">
+                     <h6 class="section-small-h6">MEET OUR TEAM</h6>
+                     <h1 class="section-h45 mt-4">This Is Our Growing<br>
+                        Great Team.
+                     </h1>
+                  </div>
+               </div>
+               <div class="row cards-row mt-5">
+                  <div class="col-md-6 col-lg-3 text-center mt-4 mt-lg-2">
+                     <div class="card">
+                        <img src="assets/images/new/team/Team 1.jpg" class="img-fluid">
+                        <div class="card-footer text-center">
+                           <h6 class="mb-0">Marvin McKinney</h6>
+                           <p class="mb-0">UI/UX Designer</p>
                         </div>
-                    </div>
-                    <div class="col-md-6 col-lg-3 text-center mt-4 mt-lg-2">
-                        <div class="card">
-                            <img src="assets/images/Group 588.png" class="img-fluid">
-                            <div class="card-footer text-center">
-                                <h6 class="mb-0">Mark Wiens</h6>
-                                <p class="mb-0">App Developer</p>
-                            </div>
+                     </div>
+                  </div>
+                  <div class="col-md-6 col-lg-3 text-center mt-4 mt-lg-2">
+                     <div class="card">
+                        <img src="assets/images/new/team/Team 2.jpg" class="img-fluid">
+                        <div class="card-footer text-center">
+                           <h6 class="mb-0">Mark Wiens</h6>
+                           <p class="mb-0">App Developer</p>
                         </div>
-                    </div>
-                    <div class="col-md-6 col-lg-3 text-center mt-4 mt-lg-2">
-                        <div class="card">
-                            <img src="assets/images/Group 589.png" class="img-fluid">
-                            <div class="card-footer text-center">
-                                <h6 class="mb-0">Sohana</h6>
-                                <p class="mb-0">WordPress Developer</p>
-                            </div>
+                     </div>
+                  </div>
+                  <div class="col-md-6 col-lg-3 text-center mt-4 mt-lg-2">
+                     <div class="card">
+                        <img src="assets/images/new/team/Team 3.jpg" class="img-fluid">
+                        <div class="card-footer text-center">
+                           <h6 class="mb-0">Sohana</h6>
+                           <p class="mb-0">WordPress Developer</p>
                         </div>
-                    </div>
-                    <div class="col-md-6 col-lg-3 text-center mt-4 mt-lg-2">
-                        <div class="card">
-                            <img src="assets/images/Group 592.png" class="img-fluid">
-                            <div class="card-footer text-center">
-                                <h6 class="mb-0">Brooklyn Simmons</h6>
-                                <p class="mb-0">Cloud Enginner</p>
-                            </div>
+                     </div>
+                  </div>
+                  <div class="col-md-6 col-lg-3 text-center mt-4 mt-lg-2">
+                     <div class="card">
+                        <img src="assets/images/new/team/Team 4.jpg" class="img-fluid">
+                        <div class="card-footer text-center">
+                           <h6 class="mb-0">Brooklyn Simmons</h6>
+                           <p class="mb-0">Cloud Enginner</p>
                         </div>
-                    </div>
-                </div>
+                     </div>
+                  </div>
+               </div>
             </div>
-        </section>
+         </section>
         <!-- greate team section end -->
         <!-- our packages section start -->
         <section class="our-packages-sec ">
