--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                   <div class="carousel-item active">
                      <div class="row main-row">
                         <div class="col-md-6">
-                           <img src="assets/images/Group 182.png" class="img-fluid">
+                           <img src="assets/images/new/slider-1.png" class="img-fluid">
                         </div>
                         <div class="col-md-6 right-sec">
                            <div class="right-text-sec">
@@ -189,7 +189,7 @@
                   <div class="carousel-item">
                      <div class="row main-row">
                         <div class="col-md-6">
-                           <img src="assets/images/sliderb.png" class="img-fluid">
+                           <img src="assets/images/new/slider-2.png" class="img-fluid">
                         </div>
                         <div class="col-md-6 right-sec">
                            <div class="right-text-sec">
@@ -216,7 +216,7 @@
                   <div class="carousel-item">
                      <div class="row main-row">
                         <div class="col-md-6">
-                           <img src="assets/images/sliderc.png" class="img-fluid">
+                           <img src="assets/images/new/slider-3.png" class="img-fluid">
                         </div>
                         <div class="col-md-6 right-sec">
                            <div class="right-text-sec">
@@ -511,7 +511,7 @@
          <div class="row cards-row mt-5">
             <div class="col-md-6 col-lg-3 text-center mt-4 mt-lg-2">
                <div class="card">
-                  <img src="assets/images/Group 586.png" class="img-fluid">
+                  <img src="assets/images/new/team/Team 1.jpg" class="img-fluid">
                   <div class="card-footer text-center">
                      <h6 class="mb-0">Marvin McKinney</h6>
                      <p class="mb-0">UI/UX Designer</p>
@@ -520,7 +520,7 @@
             </div>
             <div class="col-md-6 col-lg-3 text-center mt-4 mt-lg-2">
                <div class="card">
-                  <img src="assets/images/Group 588.png" class="img-fluid">
+                  <img src="assets/images/new/team/Team 2.jpg" class="img-fluid">
                   <div class="card-footer text-center">
                      <h6 class="mb-0">Mark Wiens</h6>
                      <p class="mb-0">App Developer</p>
@@ -529,7 +529,7 @@
             </div>
             <div class="col-md-6 col-lg-3 text-center mt-4 mt-lg-2">
                <div class="card">
-                  <img src="assets/images/Group 589.png" class="img-fluid">
+                  <img src="assets/images/new/team/Team 3.jpg" class="img-fluid">
                   <div class="card-footer text-center">
                      <h6 class="mb-0">Sohana</h6>
                      <p class="mb-0">WordPress Developer</p>
@@ -538,7 +538,7 @@
             </div>
             <div class="col-md-6 col-lg-3 text-center mt-4 mt-lg-2">
                <div class="card">
-                  <img src="assets/images/Group 592.png" class="img-fluid">
+                  <img src="assets/images/new/team/Team 4.jpg" class="img-fluid">
                   <div class="card-footer text-center">
                      <h6 class="mb-0">Brooklyn Simmons</h6>
                      <p class="mb-0">Cloud Enginner</p>
