--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -194,32 +194,42 @@
                   <div class="owl-carousel team-owl-carousel">
                      <div class="item">
                         <div class="carosal-item text-center">
-                           <img src="assets/images/Dreamtech-300x232.png" class="carousel-img">
+                           <img src="assets/images/new/clients/Balance 1.png" class="carousel-img">
                         </div>
                      </div>
                      <div class="item">
                         <div class="carosal-item text-center">
-                           <img src="assets/images/Firle-300x232.webp" class="carousel-img">
+                           <img src="assets/images/new/clients/Business Idea.png" class="carousel-img">
                         </div>
                      </div>
                      <div class="item">
                         <div class="carosal-item text-center">
-                           <img src="assets/images/Kuishi-300x232.webp" class="carousel-img">
+                           <img src="assets/images/new/clients/Cygnus.png" class="carousel-img">
                         </div>
                      </div>
                      <div class="item">
                         <div class="carosal-item text-center">
-                           <img src="assets/images/Loom-300x232.webp" class="carousel-img">
+                           <img src="assets/images/new/clients/Elite Hub.png" class="carousel-img">
                         </div>
                      </div>
                      <div class="item">
                         <div class="carosal-item text-center">
-                           <img src="assets/images/Ravi-Ollie-300x232.webp" class="carousel-img">
+                           <img src="assets/images/new/clients/Fort Realtity.png" class="carousel-img">
                         </div>
                      </div>
                      <div class="item">
                         <div class="carosal-item text-center">
-                           <img src="assets/images/signtureworks-300x232.png" class="carousel-img">
+                           <img src="assets/images/new/clients/Hamnet Logo.png" class="carousel-img">
+                        </div>
+                     </div>
+                     <div class="item">
+                        <div class="carosal-item text-center">
+                           <img src="assets/images/new/clients/Homes Finder.png" class="carousel-img">
+                        </div>
+                     </div>
+                     <div class="item">
+                        <div class="carosal-item text-center">
+                           <img src="assets/images/new/clients/MIVA.png" class="carousel-img">
                         </div>
                      </div>
                   </div>
