--- a/youtube-marketing.html
+++ b/youtube-marketing.html
@@ -391,48 +391,58 @@
         <!-- our clients section start -->
         <section class="our-client-sec mt-50">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-12 text-center">
-                        <h6 class="section-small-h6">Our Clients</h6>
-                        <h1 class="section-h45 mt-4 mt-lg-3 mt-xl-4">We're proud to have worked with</h1>
-                    </div>
-                </div>
-                <div class="client-carousel">
-                    <div class="owl-carousel team-owl-carousel">
-                        <div class="item">
-                            <div class="carosal-item text-center">
-                                <img src="assets/images/Dreamtech-300x232.png" class="carousel-img">
-                            </div>
+               <div class="row">
+                  <div class="col-md-12 text-center">
+                     <h6 class="section-small-h6">Our Clients</h6>
+                     <h1 class="section-h45 mt-4 mt-lg-3 mt-xl-4">We're proud to have worked with</h1>
+                  </div>
+               </div>
+               <div class="client-carousel">
+                  <div class="owl-carousel team-owl-carousel">
+                     <div class="item">
+                        <div class="carosal-item text-center">
+                           <img src="assets/images/new/clients/Balance 1.png" class="carousel-img">
                         </div>
-                        <div class="item">
-                            <div class="carosal-item text-center">
-                                <img src="assets/images/Firle-300x232.webp" class="carousel-img">
-                            </div>
+                     </div>
+                     <div class="item">
+                        <div class="carosal-item text-center">
+                           <img src="assets/images/new/clients/Business Idea.png" class="carousel-img">
                         </div>
-                        <div class="item">
-                            <div class="carosal-item text-center">
-                                <img src="assets/images/Kuishi-300x232.webp" class="carousel-img">
-                            </div>
+                     </div>
+                     <div class="item">
+                        <div class="carosal-item text-center">
+                           <img src="assets/images/new/clients/Cygnus.png" class="carousel-img">
                         </div>
-                        <div class="item">
-                            <div class="carosal-item text-center">
-                                <img src="assets/images/Loom-300x232.webp" class="carousel-img">
-                            </div>
+                     </div>
+                     <div class="item">
+                        <div class="carosal-item text-center">
+                           <img src="assets/images/new/clients/Elite Hub.png" class="carousel-img">
                         </div>
-                        <div class="item">
-                            <div class="carosal-item text-center">
-                                <img src="assets/images/Ravi-Ollie-300x232.webp" class="carousel-img">
-                            </div>
+                     </div>
+                     <div class="item">
+                        <div class="carosal-item text-center">
+                           <img src="assets/images/new/clients/Fort Realtity.png" class="carousel-img">
                         </div>
-                        <div class="item">
-                            <div class="carosal-item text-center">
-                                <img src="assets/images/signtureworks-300x232.png" class="carousel-img">
-                            </div>
+                     </div>
+                     <div class="item">
+                        <div class="carosal-item text-center">
+                           <img src="assets/images/new/clients/Hamnet Logo.png" class="carousel-img">
                         </div>
-                    </div>
-                </div>
+                     </div>
+                     <div class="item">
+                        <div class="carosal-item text-center">
+                           <img src="assets/images/new/clients/Homes Finder.png" class="carousel-img">
+                        </div>
+                     </div>
+                     <div class="item">
+                        <div class="carosal-item text-center">
+                           <img src="assets/images/new/clients/MIVA.png" class="carousel-img">
+                        </div>
+                     </div>
+                  </div>
+               </div>
             </div>
-        </section>
+         </section>
         <!-- our client section end -->
         <!-- greate team section start  -->
         <section class="market-great-team">
