--- a/blogs.html
+++ b/blogs.html
@@ -7,7 +7,9 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+      <link
+         href="https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+         rel="stylesheet">
       <link rel="icon" href="assets/images/favicon.svg">
       <meta name='viewport' content='width=device-width, initial-scale=1'>
       <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/bootstrap.min.css'>
@@ -17,12 +19,13 @@
       <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/style.css'>
       <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/global.css'>
    </head>
+   
    <body>
     <section class="blogs-page">
         <section class="main-header">
          <nav class="navbar navbar-expand-lg">
             <div class="container cus-container">
-               <a class="navbar-brand" href="index.html"><img src="assets/images/market-logo.png" class="img-fluid"></a>
+               <a class="navbar-brand" href="index.html"><img src="assets/images/new/SM Light@2x.png" class="img-fluid"></a>
                <button class="navbar-toggler" id="navbar-toggler" type="button" data-bs-toggle="collapse"
                   data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                   aria-label="Toggle navigation">
@@ -254,7 +257,7 @@
        <div class="row">
           <div class="col-12 col-sm-6 col-lg-3 mt-3">
              <div>
-                <img src="assets/images/market-logo.png" class="img-fluid">
+                <img src="assets/images/new/SM Light@2x.png" class="img-fluid">
                 <ul class="footer-ul">
                    <li><a href="#">Home</a></li>
                    <li><a href="#">Who We Are</a></li>
