--- a/content-marketing.html
+++ b/content-marketing.html
@@ -26,7 +26,7 @@
         <section>
             <nav class="navbar navbar-expand-lg">
                 <div class="container cus-container">
-                   <a class="navbar-brand" href="index.html"><img src="assets/images/market-logo.png" class="img-fluid"></a>
+                   <a class="navbar-brand" href="index.html"><img src="assets/images/new/SM Light@2x.png" class="img-fluid"></a>
                    <button class="navbar-toggler" id="navbar-toggler" type="button" data-bs-toggle="collapse"
                       data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                       aria-label="Toggle navigation">
@@ -1034,7 +1034,7 @@
             <div class="row">
                 <div class="col-12 col-sm-6 col-lg-3 mt-3">
                     <div>
-                        <img src="assets/images/market-logo.png" class="img-fluid">
+                        <img src="assets/images/new/SM Light@2x.png" class="img-fluid">
                         <ul class="footer-ul">
                             <li><a href="#">Home</a></li>
                             <li><a href="#">Who We Are</a></li>
