add banner images of social-media-advertising

--- a/social-media-marketing.html
+++ b/social-media-marketing.html
@@ -123,7 +123,7 @@
             </div>
          </nav>
             <div class="top-header meet-team-top-header p-0">
-               <div class="pages-banner-head-content">
+               <div class="pages-banner-head-content social-media-marketing">
                   <div class="bg-black-overlay"></div>
                   <div class="pages-banner-text-box">
                      <div class="container">
@@ -140,22 +140,22 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                            <a class="social-link" href="#">Facebook&nbsp;Advertising</a>
+                            <a class="social-link" href="facebook-advertising.html">Facebook&nbsp;Advertising</a>
                         </div>
                         <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                            <a class="social-link" href="#">Instagram&nbsp;Advertising</a>
+                            <a class="social-link" href="instagram-advertising.html">Instagram&nbsp;Advertising</a>
                         </div>
                         <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                            <a class="social-link" href="#">Linkdin&nbsp;Advertising</a>
+                            <a class="social-link" href="linkdin-advertising.html">Linkdin&nbsp;Advertising</a>
                         </div>
                         <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                            <a class="social-link" href="#">Tiktok&nbsp;Advertising</a>
+                            <a class="social-link" href="tiktok-advertising.html">Tiktok&nbsp;Advertising</a>
                         </div>
                         <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                            <a class="social-link" href="#">Twitter&nbsp;Advertising</a>
+                            <a class="social-link" href="twitter-advertising.html">Twitter&nbsp;Advertising</a>
                         </div>
                         <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                            <a class="social-link" href="#">Pinterest&nbsp;Advertising</a>
+                            <a class="social-link" href="pinterest-advertising.html">Pinterest&nbsp;Advertising</a>
                         </div>
                     </div>
                 </div>
