--- a/twitter-advertising.html
+++ b/twitter-advertising.html
@@ -123,7 +123,7 @@
             </div>
          </nav>
          <div class="top-header meet-team-top-header p-0">
-            <div class="pages-banner-head-content">
+            <div class="pages-banner-head-content twitter-advertising">
                <div class="bg-black-overlay"></div>
                <div class="pages-banner-text-box">
                   <div class="container">
@@ -138,28 +138,28 @@
          </div>
          <div class="social-links-row d-none d-md-block">
             <div class="container">
-               <div class="row">
-                  <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                     <a class="social-link" href="#">Facebook&nbsp;Advertising</a>
-                  </div>
-                  <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                     <a class="social-link" href="#">Instagram&nbsp;Advertising</a>
-                  </div>
-                  <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                     <a class="social-link" href="#">Linkdin&nbsp;Advertising</a>
-                  </div>
-                  <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                     <a class="social-link" href="#">Tiktok&nbsp;Advertising</a>
-                  </div>
-                  <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                     <a class="social-link" href="#">Twitter&nbsp;Advertising</a>
-                  </div>
-                  <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                     <a class="social-link" href="#">Pinterest&nbsp;Advertising</a>
-                  </div>
-               </div>
+                <div class="row">
+                    <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                        <a class="social-link" href="facebook-advertising.html">Facebook&nbsp;Advertising</a>
+                    </div>
+                    <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                        <a class="social-link" href="instagram-advertising.html">Instagram&nbsp;Advertising</a>
+                    </div>
+                    <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                        <a class="social-link" href="linkdin-advertising.html">Linkdin&nbsp;Advertising</a>
+                    </div>
+                    <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                        <a class="social-link" href="tiktok-advertising.html">Tiktok&nbsp;Advertising</a>
+                    </div>
+                    <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                        <a class="social-link active" href="twitter-advertising.html">Twitter&nbsp;Advertising</a>
+                    </div>
+                    <div class="col-sm-6 col-md-4 col-lg-2 my-2">
+                        <a class="social-link" href="pinterest-advertising.html">Pinterest&nbsp;Advertising</a>
+                    </div>
+                </div>
             </div>
-         </div>
+        </div>
       </section>
       <!-- facebook ads with us section start -->
       <section class="why-work-with-us">
