add pay per click images and links

--- a/google-shopping-management.html
+++ b/google-shopping-management.html
@@ -123,7 +123,7 @@
             </div>
          </nav>
          <div class="top-header meet-team-top-header p-0">
-            <div class="pages-banner-head-content">
+            <div class="pages-banner-head-content google-shopping-management">
                <div class="bg-black-overlay"></div>
                <div class="pages-banner-text-box">
                   <div class="container">
@@ -140,16 +140,16 @@
             <div class="container">
                <div class="row justify-content-center">
                   <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                     <a class="social-link" href="#">Google&nbsp;Search</a>
+                     <a class="social-link" href="google-advertising-agency.html">Google&nbsp;Search</a>
                   </div>
                   <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                     <a class="social-link" href="#">Google&nbsp;Shoping</a>
+                     <a class="social-link active" href="google-shopping-management.html">Google&nbsp;Shoping</a>
                   </div>
                   <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                     <a class="social-link" href="#">Youtube&nbsp;Advertising</a>
+                     <a class="social-link" href="youtube-advertising.html">Youtube&nbsp;Advertising</a>
                   </div>
                   <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                     <a class="social-link" href="#">Bing&nbsp;Ads</a>
+                     <a class="social-link" href="bing-ads.html">Bing&nbsp;Ads</a>
                   </div>
                </div>
             </div>
