add seo images and links

--- a/search-engine-optimisation.html
+++ b/search-engine-optimisation.html
@@ -123,7 +123,7 @@
                </div>
             </nav>
             <div class="top-header meet-team-top-header p-0">
-               <div class="pages-banner-head-content">
+               <div class="pages-banner-head-content search-engin-page">
                   <div class="bg-black-overlay"></div>
                   <div class="pages-banner-text-box">
                      <div class="container">
@@ -140,19 +140,19 @@
                <div class="container">
                   <div class="row justify-content-center">
                      <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                        <a class="social-link" href="#">Organic&nbsp;SEO</a>
+                        <a class="social-link" href="organic-seo.html">Organic&nbsp;SEO</a>
                      </div>
                      <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                        <a class="social-link" href="#">eCommerce&nbsp;SEO</a>
+                        <a class="social-link" href="ecommerce-seo.html">eCommerce&nbsp;SEO</a>
                      </div>
                      <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                        <a class="social-link" href="#">Shopify&nbsp;SEO&nbsp;Agency</a>
+                        <a class="social-link" href="shopify-seo-agency.html">Shopify&nbsp;SEO&nbsp;Agency</a>
                      </div>
                      <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                        <a class="social-link" href="#">Wordpress&nbsp;SEO&nbsp;Agency</a>
+                        <a class="social-link" href="wordpress-seo.html">Wordpress&nbsp;SEO&nbsp;Agency</a>
                      </div>
                      <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                        <a class="social-link" href="#">Digital&nbsp;PR</a>
+                        <a class="social-link" href="digital-pr.html">Digital&nbsp;PR</a>
                      </div>
                   </div>
                </div>
