add website images and links

--- a/web-development-agency.html
+++ b/web-development-agency.html
@@ -127,7 +127,7 @@
                 </div>
              </nav>
             <div class="top-header meet-team-top-header p-0">
-                <div class="pages-banner-head-content">
+                <div class="pages-banner-head-content web-development-page">
                     <div class="bg-black-overlay"></div>
                     <div class="pages-banner-text-box">
                         <div class="container">
@@ -146,13 +146,13 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                            <a class="social-link" href="#">Shopify</a>
+                            <a class="social-link" href="shopify-development-agency.html">Shopify</a>
                         </div>
                         <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                            <a class="social-link" href="#">Wordpress</a>
+                            <a class="social-link" href="wordpress-development-agency.html">Wordpress</a>
                         </div>
                         <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                            <a class="social-link" href="#">Conversion&nbsp;Rate&nbsp;Optimisation</a>
+                            <a class="social-link" href="conversion-rate-optimisation.html">Conversion&nbsp;Rate&nbsp;Optimisation</a>
                         </div>
                     </div>
                 </div>
