add complete what we do pages images with links

--- a/digital-strategy.html
+++ b/digital-strategy.html
@@ -127,15 +127,14 @@
                 </div>
              </nav>
             <div class="top-header meet-team-top-header p-0">
-                <div class="pages-banner-head-content">
+                <div class="pages-banner-head-content email-marketing">
                     <div class="bg-black-overlay"></div>
                     <div class="pages-banner-text-box">
                         <div class="container">
                             <div class="col-md-12 col-lg-8">
                                 <h1 class="banner-main-heading">Digital Marketing <br> <span
                                         class="redOne-fill-color"> Strategies</span></h1>
-                                <h3 class="banner-sub-heading">A useful digital strategy is a model for your brand’s success.
-                                    </h3>
+                                <h3 class="banner-sub-heading">A useful digital strategy is a model for your brand’s success.</h3>
                                 <a class="nav-link btn nav-btn mt-4" href="#">Get A Qoute</a>
                             </div>
                         </div>
