--- a/podcast-marketing.html
+++ b/podcast-marketing.html
@@ -127,7 +127,7 @@
                 </div>
              </nav>
             <div class="top-header meet-team-top-header p-0">
-                <div class="pages-banner-head-content">
+                <div class="pages-banner-head-content poadcast-marketing">
                     <div class="bg-black-overlay"></div>
                     <div class="pages-banner-text-box">
                         <div class="container">
@@ -145,19 +145,19 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                            <a class="social-link" href="#">Video&nbsp;Content</a>
+                            <a class="social-link" href="video-content-agency.html">Video&nbsp;Content</a>
                         </div>
                         <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                            <a class="social-link" href="#">Copywriting</a>
+                            <a class="social-link" href="copywriting-agency.html">Copywriting</a>
                         </div>
                         <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                            <a class="social-link" href="#">Branding&nbsp;&&nbsp;Logo</a>
+                            <a class="social-link" href="branding-agency.html">Branding&nbsp;&&nbsp;Logo</a>
                         </div>
                         <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                            <a class="social-link" href="#">Podcast&nbsp;Marketing</a>
+                            <a class="social-link active" href="podcast-marketing.html">Podcast&nbsp;Marketing</a>
                         </div>
                         <div class="col-sm-6 col-md-4 col-lg-2 my-2">
-                            <a class="social-link" href="#">Youtube&nbsp;Marketing</a>
+                            <a class="social-link" href="youtube-marketing.html">Youtube&nbsp;Marketing</a>
                         </div>
                     </div>
                 </div>
