--- a/social-media-management-services.html
+++ b/social-media-management-services.html
@@ -127,7 +127,7 @@
                 </div>
              </nav>
             <div class="top-header meet-team-top-header p-0">
-                <div class="pages-banner-head-content">
+                <div class="pages-banner-head-content social-media-management-page">
                     <div class="bg-black-overlay"></div>
                     <div class="pages-banner-text-box">
                         <div class="container">
