add case study images link

--- a/case-study.html
+++ b/case-study.html
@@ -167,9 +167,9 @@
                                     <div class="item col-md-3 col-sm-6 col-xs-12 logos" style="position: absolute; left: 0px; top: 0px;">
                                         <div class="page-preview">
                                             <div class="thumb">
-                                                <img src="https://cdn.vox-cdn.com/thumbor/Guer0rnI00zMV8vaCg_JOCB7vTY=/0x0:1190x793/1200x800/filters:focal(500x302:690x492)/cdn.vox-cdn.com/uploads/chorus_image/image/60671473/firefox_logos.0.jpg" class="img-responsive" alt="">
+                                                <img src="assets/images/new/Projects/Projects - Branding - DubaiScop.jpg" class="img-responsive" alt="">
                                                 <div class="overlay">
-                                                    <a href="#" >View Page</a>
+                                                    <a href="assets/images/new/Projects/Projects - Branding - DubaiScop.jpg" >View Page</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -177,7 +177,7 @@
                                     <div class="item col-md-3 col-sm-6 col-xs-12 logos" style="position: absolute; left: 285px; top: 0px;">
                                         <div class="page-preview">
                                             <div class="thumb">
-                                                <img src="https://cdn.vox-cdn.com/thumbor/Guer0rnI00zMV8vaCg_JOCB7vTY=/0x0:1190x793/1200x800/filters:focal(500x302:690x492)/cdn.vox-cdn.com/uploads/chorus_image/image/60671473/firefox_logos.0.jpg" class="img-responsive" alt="">
+                                                <img src="assets/images/new/Projects/Projects - Branding - Mutasil.jpg" class="img-responsive" alt="">
                                                 <div class="overlay">
                                                     <a href="#" >View Page</a>
                                                 </div>
@@ -187,7 +187,7 @@
                                     <div class="item col-md-3 col-sm-6 col-xs-12 logos" style="position: absolute; left: 570px; top: 0px;">
                                         <div class="page-preview">
                                             <div class="thumb">
-                                                <img src="https://cdn.vox-cdn.com/thumbor/Guer0rnI00zMV8vaCg_JOCB7vTY=/0x0:1190x793/1200x800/filters:focal(500x302:690x492)/cdn.vox-cdn.com/uploads/chorus_image/image/60671473/firefox_logos.0.jpg" class="img-responsive" alt="">
+                                                <img src="assets/images/new/Projects/Projects - Cygnus.jpg" class="img-responsive" alt="">
                                                 <div class="overlay">
                                                     <a href="#" >View Page</a>
                                                 </div>
@@ -197,7 +197,7 @@
                                     <div class="item col-md-3 col-sm-6 col-xs-12 mockup" style="position: absolute; left: 855px; top: 0px;">
                                         <div class="page-preview">
                                             <div class="thumb">
-                                                <img src="https://img.freepik.com/free-psd/set-digital-devices-screen-mockup_53876-76505.jpg?size=626&ext=jpg" class="img-responsive" alt="">
+                                                <img src="assets/images/new/Projects/Projects - Elite Hub.jpg" class="img-responsive" alt="">
                                                 <div class="overlay">
                                                     <a href="#" >View Page</a>
                                                 </div>
@@ -207,7 +207,7 @@
                                     <div class="item col-md-3 col-sm-6 col-xs-12 mockup" style="position: absolute; left: 0px; top: 297px;">
                                         <div class="page-preview">
                                             <div class="thumb">
-                                                <img src="https://img.freepik.com/free-psd/set-digital-devices-screen-mockup_53876-76505.jpg?size=626&ext=jpg" class="img-responsive" alt="">
+                                                <img src="assets/images/new/Projects/Projects - Hamnet.jpg" class="img-responsive" alt="">
                                                 <div class="overlay">
                                                     <a href="#" >View Page</a>
                                                 </div>
@@ -217,7 +217,7 @@
                                     <div class="item col-md-3 col-sm-6 col-xs-12 app-ui" style="position: absolute; left: 855px; top: 297px;">
                                         <div class="page-preview">
                                             <div class="thumb">
-                                                <img src="https://cdn.dribbble.com/users/1789926/screenshots/4318372/cover_2.png" class="img-responsive" alt="">
+                                                <img src="assets/images/new/Projects/Projects - Mobile App UI .jpg" class="img-responsive" alt="">
                                                 <div class="overlay">
                                                     <a href="#" >View Page</a>
                                                 </div>
@@ -227,7 +227,7 @@
                                     <div class="item col-md-3 col-sm-6 col-xs-12 app-ui" style="position: absolute; left: 0px; top: 594px;">
                                         <div class="page-preview">
                                             <div class="thumb">
-                                                <img src="https://cdn.dribbble.com/users/1789926/screenshots/4318372/cover_2.png" class="img-responsive" alt="">
+                                                <img src="assets/images/new/Projects/Projects - Social Media Marketing - Ads.jpg" class="img-responsive" alt="">
                                                 <div class="overlay">
                                                     <a href="#" >View Page</a>
                                                 </div>
