change header and one page text

--- a/index.html
+++ b/index.html
@@ -172,9 +172,7 @@
                               </h1>
                               <h3>Let us help you.</h3>
                               <div class="text-center">
-                                 <p>We’re a Digital Marketing Agency in London, made up of a group of
-                                    passionate individuals who get excited about helping small to medium sized
-                                    businesses create impact with their customers.
+                                 <p>We are a Digital Marketing Agency in Dubai, consisting of a group of a committed team that can help small to medium-sized businesses make an impact with their clients.
                                  </p>
                               </div>
                               <div class="buttons">
@@ -194,14 +192,12 @@
                         <div class="col-md-6 right-sec">
                            <div class="right-text-sec">
                               <h1 class="top-right-text">DO YOU</h1>
-                              <h1>WANT MORE<br>
-                                 CONNECTIONS?
+                              <h1>Want your brand  <br>
+                                 to grow?
                               </h1>
                               <h3>Let us help you.</h3>
                               <div class="text-center">
-                                 <p>We’re a Digital Marketing Agency in London, made up of a group of
-                                    passionate individuals who get excited about helping small to medium sized
-                                    businesses create impact with their customers.
+                                 <p>All services are customized to drive your business. We make the most of trends but believe in attaining great results, whatever your objectives and channel we’re working on.
                                  </p>
                               </div>
                               <div class="buttons">
@@ -221,14 +217,12 @@
                         <div class="col-md-6 right-sec">
                            <div class="right-text-sec">
                               <h1 class="top-right-text">DO YOU</h1>
-                              <h1>WANT MORE<br>
-                                 CONNECTIONS?
+                              <h1>Want business <br>
+                                 to flourish?
                               </h1>
                               <h3>Let us help you.</h3>
                               <div class="text-center">
-                                 <p>We’re a Digital Marketing Agency in London, made up of a group of
-                                    passionate individuals who get excited about helping small to medium sized
-                                    businesses create impact with their customers.
+                                 <p>Represent new ideas to help you evolve. Reach a new audience with the latest channels to strengthen your website. Build strategies to find new clients to take your site to a whole new level.
                                  </p>
                               </div>
                               <div class="buttons">
